// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Flash/> renders <Flash /> component 1`] = `
<Styled(Alert)
  bsStyle="danger"
>
  <MarkdownRenderer
    markdown="Error"
  />
  <Button
    active={false}
    block={false}
    bsClass="btn"
    bsStyle="default"
    className="close"
    disabled={false}
    onClick={[MockFunction]}
  >
    <FontAwesome
      name="times"
    />
  </Button>
</Styled(Alert)>
`;

exports[`<Flash/> updates via props 1`] = `
<Styled(Alert)
  bsStyle="success"
>
  <MarkdownRenderer
    markdown="Success"
  />
  <Button
    active={false}
    block={false}
    bsClass="btn"
    bsStyle="default"
    className="close"
    disabled={false}
    onClick={[MockFunction]}
  >
    <FontAwesome
      name="times"
    />
  </Button>
</Styled(Alert)>
`;
